--- a/styles/common.css
+++ b/styles/common.css
@@ -15,13 +15,14 @@ header .head_wrap {
     border-bottom: 1px solid #fff;
     background: rgba(0, 0, 0, 0.2);
 }
-header .head_wrap .gnb {
+header .head_wrap nav {}
+header .head_wrap nav .gnb {
     display: flex;
     gap: 20px;
     padding: 29.5px 0;
 }
-header .head_wrap .gnb li {}
-header .head_wrap .gnb li a {
+header .head_wrap nav .gnb li {}
+header .head_wrap nav .gnb li a {
     font-family: 'SunBatang-Light';
     font-size: 18px;
     color: #fff;
@@ -36,18 +37,28 @@ header .head_wrap .logo h1 a img {}
 header .head_wrap .right_wrap {
     display: flex; gap: 20px;
 }
-header .head_wrap .right_wrap a {}
-header .head_wrap .right_wrap a img {}
-header .head_wrap .right_wrap .lang_wrap {}
+header .head_wrap .right_wrap > a {}
+header .head_wrap .right_wrap > a img {}
+header .head_wrap .right_wrap .lang_wrap {
+    position: relative;
+}
 header .head_wrap .right_wrap .lang_wrap #lang_btn {}
 header .head_wrap .right_wrap .lang_wrap #lang_btn img:nth-child(1) {}
 header .head_wrap .right_wrap .lang_wrap #lang_btn img:nth-child(2) {}
 header .head_wrap .right_wrap .lang_wrap .lang_select {
     display: none; flex-flow: column nowrap;
-    gap: 12px;
+    position: absolute; top: 100; left: 0; transform: translateY(10px);
+    background: rgba(0, 0, 0, 0.8);
+    border: 1px solid #fff;
+    padding: 0 12px 12px;
 }
-header .head_wrap .right_wrap .lang_wrap .lang_select a {}
-header .head_wrap .right_wrap .lang_wrap .lang_select a img {}
+header .head_wrap .right_wrap .lang_wrap .lang_select a {
+    color: #fff;
+    margin-top: 12px;
+}
+header .head_wrap .right_wrap .lang_wrap .lang_select a:hover {
+    text-decoration: underline;
+}
 /* footer */
 footer {}
 footer .foot_wrap{}
